--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -73,7 +73,7 @@ services:
   linea-besu-sequencer-plugin-downloader:
     image: busybox:1.36.1
     # profiles: ["l2", "l2-bc"] this works locally but breakes on CI, maybe Docker compose version issue
-    command: [ "sh", "/file-downloader.sh", "https://github.com/Consensys/linea-sequencer/releases/download/v0.1.4-test37/besu-sequencer-plugins-v0.1.4-test37.jar",  "/linea-besu-sequencer" ]
+    command: [ "sh", "/file-downloader.sh", "https://github.com/Consensys/linea-sequencer/releases/download/v0.1.4-test37/besu-sequencer-plugins-v0.1.4-test37.jar", "/linea-besu-sequencer" ]
     volumes:
       - ./scripts/file-downloader.sh:/file-downloader.sh:ro
       - ../tmp/linea-besu-sequencer/plugins:/linea-besu-sequencer/
@@ -103,7 +103,7 @@ services:
       BOOTNODES: "enode://14408801a444dafc44afbccce2eb755f902aed3b5743fed787b3c790e021fef28b8c827ed896aa4e8fb46e22bd67c39f994a73768b4b382f8597b0d44370e15d@11.11.11.101:30303"
       NETRESTRICT: "11.11.11.0/24"
       DISABLE_ZKEVM: "true"
-      MAX_BLOCK_GAS: 10000000  #10M
+      MAX_BLOCK_GAS: 10000000 #10M
       MAX_BLOCKDATA_BYTES: 35000 #35 KBytes
       MAX_TXDATA_BYTES: 30000 #30 KBytes
       ZKGETH_LOWER_GAS_MARGIN_PERCENTS: 120
@@ -186,7 +186,7 @@ services:
       # ETHSTATS_URL: "zkgeth-traces-node:${WS_SECRET:-dummy-secret}@l2-ethstats:3000"
       BOOTNODES: "enode://14408801a444dafc44afbccce2eb755f902aed3b5743fed787b3c790e021fef28b8c827ed896aa4e8fb46e22bd67c39f994a73768b4b382f8597b0d44370e15d@11.11.11.101:30303"
       TRACES_DIR: "/data/traces/raw"
-      MAX_BLOCK_GAS: 10000000  #10M
+      MAX_BLOCK_GAS: 10000000 #10M
       MAX_BLOCKDATA_BYTES: 35000 #35 KBytes
       MAX_TXDATA_BYTES: 30000 #30 KBytes
       VERSION: "0.2.0"
@@ -221,6 +221,8 @@ services:
       - ./config/prover/v2/prover-decompression.config.toml:/opt/linea/prover/config/executor/decompression.config.toml
       - ./config/prover/v2/prover-aggregation.config.toml:/opt/linea/prover/config/executor/aggregation.config.toml
       - ../config/common/traces-limits-v1.toml:/opt/linea/prover/config/executor/traces-limits-M.toml
+      # full-prover assets
+      # - ../prover/prover-assets:/opt/linea/prover/prover-assets
     networks:
       linea:
         ipv4_address: 11.11.11.108
@@ -296,7 +298,7 @@ services:
         condition: service_started
     ports:
       - "8080:8080"
-    command: [ 'java', '-Dvertx.configurationFile=config/vertx-options.json', '-Dlog4j2.configurationFile=config/log4j2-dev.xml', '-jar', 'libs/app-all.jar', 'config/traces-app-docker.config.toml', ]
+    command: [ 'java', '-Dvertx.configurationFile=config/vertx-options.json', '-Dlog4j2.configurationFile=config/log4j2-dev.xml', '-jar', 'libs/app-all.jar', 'config/traces-app-docker.config.toml' ]
     volumes:
       - ../config/traces-api/traces-app-docker.config.toml:/opt/consensys/linea/traces-api-facade/config/traces-app-docker.config.toml:ro
       - ../config/traces-api/vertx-options.json:/opt/consensys/linea/traces-api-facade/config/vertx-options.json:ro
@@ -317,7 +319,7 @@ services:
         condition: service_healthy
     ports:
       - "8082:8080"
-    command: [ 'java', '-Dvertx.configurationFile=config/vertx-options.json', '-Dlog4j2.configurationFile=config/log4j2-dev.xml', '-jar', 'libs/transaction-exclusion-api.jar', 'config/transaction-exclusion-app-docker.config.toml', ]
+    command: [ 'java', '-Dvertx.configurationFile=config/vertx-options.json', '-Dlog4j2.configurationFile=config/log4j2-dev.xml', '-jar', 'libs/transaction-exclusion-api.jar', 'config/transaction-exclusion-app-docker.config.toml' ]
     volumes:
       - ../config/transaction-exclusion-api/transaction-exclusion-app-docker.config.toml:/opt/consensys/linea/transaction-exclusion-api/config/transaction-exclusion-app-docker.config.toml:ro
       - ../config/transaction-exclusion-api/vertx-options.json:/opt/consensys/linea/transaction-exclusion-api/config/vertx-options.json:ro
@@ -463,7 +465,7 @@ services:
   l1-cl-node:
     container_name: l1-cl-node
     hostname: l1-cl-node
-#    image: consensys/teku:24.2.0
+    #    image: consensys/teku:24.2.0
     image: consensys/teku:24.10.3
     profiles: [ "l1", "debug", "external-to-monorepo" ]
     depends_on:
@@ -491,12 +493,7 @@ services:
     build:
       context: ./config/l1-node/
     profiles: [ "l1", "debug", "external-to-monorepo" ]
-    command:
-      --genesis-time ${L1_GENESIS_TIME}
-      --l1-genesis /config/l1-genesis.json
-      --network-config /config/network-config.yml
-      --mnemonics /config/mnemonics.yaml
-      --output-dir /data/l1-node-config
+    command: --genesis-time ${L1_GENESIS_TIME} --l1-genesis /config/l1-genesis.json --network-config /config/network-config.yml --mnemonics /config/mnemonics.yaml --output-dir /data/l1-node-config
     volumes:
       - ./config/l1-node/cl/network-config.yml:/config/network-config.yml:ro
       - ./config/l1-node/cl/mnemonics.yaml:/config/mnemonics.yaml:ro
@@ -659,7 +656,7 @@ services:
     container_name: shomei-plugin-downloader
     profiles: [ "l2", "l2-bc", "external-to-monorepo" ]
     image: busybox:1.36.1
-    command: [ "sh", "/file-downloader.sh", "https://github.com/Consensys/besu-shomei-plugin/releases/download/v0.3.1/besu-shomei-plugin-v0.3.1.jar",  "/shomei-plugin" ]
+    command: [ "sh", "/file-downloader.sh", "https://github.com/Consensys/besu-shomei-plugin/releases/download/v0.3.1/besu-shomei-plugin-v0.3.1.jar", "/shomei-plugin" ]
     volumes:
       - ./scripts/file-downloader.sh:/file-downloader.sh:ro
       - ../tmp/zkbesu-shomei/plugins:/shomei-plugin/
@@ -703,13 +700,13 @@ services:
       - "4001:4001"
     env_file: "./config/blobscan/env"
     restart: no
-#    healthcheck:
-#      test: [ "CMD", "curl", "-f", "http://localhost:4001/healthcheck" ]
-#      disable: true
-#      interval: 30s
-#      timeout: 10s
-#      retries: 20
-#      start_period: 5s
+    #    healthcheck:
+    #      test: [ "CMD", "curl", "-f", "http://localhost:4001/healthcheck" ]
+    #      disable: true
+    #      interval: 30s
+    #      timeout: 10s
+    #      retries: 20
+    #      start_period: 5s
     networks:
       linea:
       l1network:
@@ -815,4 +812,3 @@ services:
       - loki
     networks:
       - linea
-
